--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="white" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="viewport" content="width=device-width, viewport-fit=cover" />
-		<title>taro-vue3-template</title>
+		<title>excercise-time</title>
 		<script>
 			<%= htmlWebpackPlugin.options.script %>
 		</script>
